--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
 <iframe src="https://schoolcheats.net/" height='1516' width='747'></iframe>
+<br>
+<iframe src="https://google.com" height='1516' width='747'></iframe>
